--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,11 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+
+  background-image: url('/quailbg.svg'); /* Використання SVG як фону */
+  background-repeat: repeat; /* Повторення зображення */
+  background-size: 20%; /* Зміна розміру кожного повторення */
+  background-position: 0 0; /* Початок з верхнього лівого кута */
 }
 
 h1,
